--- a/advent2015/Day 9 All in a Single Night.ipynb
+++ b/advent2015/Day 9 All in a Single Night.ipynb
@@ -249,7 +249,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "so we can see the shortest and longest path, which answers part 1 and 2 all in one !\n",
+    "so we can see the shortest and longest path, which answers part 1 and 2 all in one go!\n",
+    "\n",
     "lets see the graph itself:"
    ]
   },
