solved day 14 both parts

--- a/advent2015/Day 13 Knights of the Dinner Table.ipynb
+++ b/advent2015/Day 13 Knights of the Dinner Table.ipynb
@@ -25,6 +25,8 @@
    "source": [
     "# Day 13: Knights of the Dinner Table\n",
     "\n",
+    "https://adventofcode.com/2015/day/13\n",
+    "\n",
     "We have a list of people and their happiness levels depending on who they are sitting next to. We need to sit everyone at a circular table (so everyone has two neighbours) in such a way to maximise happiness.\n",
     "\n",
     "For the test setting, the optimal +happiness is 330. Whats the max +happiness for the actual guest list?"
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +83,7 @@
        " {'Alice', 'Bob', 'Carol', 'David'})"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +93,7 @@
     "    for line in data:\n",
     "        cost = int(re.search(r\"-?\\d+\", line).group())\n",
     "        if \"lose\" in line:\n",
-    "            cost = -1 * int(cost)\n",
+    "            cost *= -1\n",
     "        \n",
     "        names = re.findall('([A-Z][a-z]+)', line)\n",
     "        costs[(names[0], names[-1])] = int(cost)\n",
@@ -314,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`668` is the right answer!"
+    "`668` is the right answer, and it was nice that my solution for part 1 dealt with part 2 without needing any changes, besides adding to the input."
    ]
   }
  ],
