trying out plotly

--- a/advent2015/Day 12 JSAbacusFramework.io.ipynb
+++ b/advent2015/Day 12 JSAbacusFramework.io.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "156366"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-66d42562c1ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-52-66d42562c1ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    339\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    340\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbytearray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 341\u001b[0;31m             raise TypeError(f'the JSON object must be str, bytes or bytearray, '\n\u001b[0m\u001b[1;32m    342\u001b[0m                             f'not {s.__class__.__name__}')\n\u001b[1;32m    343\u001b[0m         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdetect_encoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'surrogatepass'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: the JSON object must be str, bytes or bytearray, not list"
      ]
@@ -102,400 +102,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': {'e': {'e': 161,\n",
-       "   'a': 'blue',\n",
-       "   'd': {'e': -14,\n",
-       "    'a': 'red',\n",
-       "    'd': {'c': 'yellow',\n",
-       "     'a': [-35, 0],\n",
-       "     'b': 'orange',\n",
-       "     'd': {'e': 70,\n",
-       "      'a': 'green',\n",
-       "      'd': 'blue',\n",
-       "      'j': 12,\n",
-       "      'c': 69,\n",
-       "      'h': 'orange',\n",
-       "      'b': 92,\n",
-       "      'g': 'yellow',\n",
-       "      'f': 'green',\n",
-       "      'i': 121}},\n",
-       "    'c': 'blue',\n",
-       "    'h': 14,\n",
-       "    'b': 46,\n",
-       "    'g': 62,\n",
-       "    'f': [179]},\n",
-       "   'j': {'e': 133, 'c': 'violet', 'a': 'orange', 'b': 'blue', 'd': 'violet'},\n",
-       "   'c': {'e': 151,\n",
-       "    'a': 'violet',\n",
-       "    'd': {'e': 'red',\n",
-       "     'c': 93,\n",
-       "     'a': 135,\n",
-       "     'g': {'e': 43, 'c': 'green', 'a': 'orange', 'b': 'green', 'd': 54},\n",
-       "     'b': 69,\n",
-       "     'd': 159,\n",
-       "     'f': 2},\n",
-       "    'c': 'green',\n",
-       "    'h': 65,\n",
-       "    'b': {'c': 126, 'a': 106, 'b': 190, 'd': -40},\n",
-       "    'g': 134,\n",
-       "    'f': 'red'},\n",
-       "   'h': 87,\n",
-       "   'b': [-3, 'yellow', 50, 120],\n",
-       "   'g': {'e': [138, 83, 'red'],\n",
-       "    'c': ['yellow',\n",
-       "     ['red', 177, 98, 'blue', 179, 'blue', 'violet', 23],\n",
-       "     108,\n",
-       "     ['green', 17, -46, 3, 99],\n",
-       "     -43,\n",
-       "     46,\n",
-       "     'orange',\n",
-       "     'yellow',\n",
-       "     {'a': 192, 'b': 39},\n",
-       "     57],\n",
-       "    'a': 'red',\n",
-       "    'b': 195,\n",
-       "    'd': 172},\n",
-       "   'f': 97,\n",
-       "   'i': 160},\n",
-       "  'a': 'orange',\n",
-       "  'd': 120,\n",
-       "  'c': 61,\n",
-       "  'h': 'red',\n",
-       "  'b': 186,\n",
-       "  'g': {'e': 'orange',\n",
-       "   'a': 82,\n",
-       "   'd': {'a': {'e': 'green',\n",
-       "     'c': -5,\n",
-       "     'a': -13,\n",
-       "     'b': 12,\n",
-       "     'd': 'blue',\n",
-       "     'f': -19}},\n",
-       "   'c': 'blue',\n",
-       "   'h': ['violet',\n",
-       "    'violet',\n",
-       "    82,\n",
-       "    3,\n",
-       "    'orange',\n",
-       "    'orange',\n",
-       "    45,\n",
-       "    'red',\n",
-       "    198,\n",
-       "    [81,\n",
-       "     'red',\n",
-       "     'green',\n",
-       "     'green',\n",
-       "     'yellow',\n",
-       "     {'c': 'orange', 'a': 'blue', 'b': 193},\n",
-       "     'blue']],\n",
-       "   'b': 99,\n",
-       "   'g': {'a': [64, 'orange', 'blue', 98], 'b': 30},\n",
-       "   'f': 'orange',\n",
-       "   'i': [167]},\n",
-       "  'f': [{'e': 'green', 'c': 168, 'a': 'red', 'b': 173, 'd': 'blue'},\n",
-       "   {'e': 'violet',\n",
-       "    'c': 90,\n",
-       "    'a': 10,\n",
-       "    'g': {'a': 3, 'b': 195},\n",
-       "    'b': 'orange',\n",
-       "    'd': {'e': 143,\n",
-       "     'c': -26,\n",
-       "     'a': 136,\n",
-       "     'g': -28,\n",
-       "     'b': 137,\n",
-       "     'd': 'violet',\n",
-       "     'f': [108, 70, 19, 'blue', 'violet', 'orange']},\n",
-       "    'f': -11},\n",
-       "   {'e': 188,\n",
-       "    'a': 173,\n",
-       "    'd': 135,\n",
-       "    'j': 148,\n",
-       "    'c': 'orange',\n",
-       "    'h': ['orange',\n",
-       "     'yellow',\n",
-       "     108,\n",
-       "     'violet',\n",
-       "     'violet',\n",
-       "     'blue',\n",
-       "     188,\n",
-       "     'yellow',\n",
-       "     'red'],\n",
-       "    'b': [145,\n",
-       "     118,\n",
-       "     'orange',\n",
-       "     'green',\n",
-       "     'green',\n",
-       "     17,\n",
-       "     ['red', 55, 86, -20, 'green', 118, 'violet', 'green']],\n",
-       "    'g': {'e': 62, 'c': 'blue', 'a': 'violet', 'b': -41, 'd': 5},\n",
-       "    'f': 'green',\n",
-       "    'i': [33, 'orange']},\n",
-       "   {'a': 'green'},\n",
-       "   {'a': [87, 'violet'], 'b': 'violet'},\n",
-       "   {'e': 'violet',\n",
-       "    'a': 147,\n",
-       "    'd': 'blue',\n",
-       "    'c': ['blue', 91, 'violet', 'violet', 'yellow', 'orange', 'yellow', -4],\n",
-       "    'h': 'yellow',\n",
-       "    'b': 19,\n",
-       "    'g': {'a': 'red'},\n",
-       "    'f': [-38, 'yellow', 'violet', -10, 'orange', 29, 'violet', 52],\n",
-       "    'i': 'red'},\n",
-       "   54,\n",
-       "   [-14,\n",
-       "    -2,\n",
-       "    {'e': 12,\n",
-       "     'a': 'violet',\n",
-       "     'd': 'blue',\n",
-       "     'j': 'orange',\n",
-       "     'c': 180,\n",
-       "     'h': {'e': 186,\n",
-       "      'a': 'green',\n",
-       "      'd': 'violet',\n",
-       "      'c': 'orange',\n",
-       "      'h': 'yellow',\n",
-       "      'b': 'yellow',\n",
-       "      'g': 'green',\n",
-       "      'f': 'violet'},\n",
-       "     'b': 'green',\n",
-       "     'g': {'e': 'green',\n",
-       "      'c': 103,\n",
-       "      'a': 119,\n",
-       "      'b': 'blue',\n",
-       "      'd': 'violet',\n",
-       "      'f': 116},\n",
-       "     'f': 22,\n",
-       "     'i': 'yellow'},\n",
-       "    ['violet', 'blue', 'blue', 'violet', 44, 'orange'],\n",
-       "    144],\n",
-       "   'red',\n",
-       "   [119,\n",
-       "    'red',\n",
-       "    [10, 15, 115, 'orange', 55, 'yellow', 85, 135, -12, 'orange'],\n",
-       "    61,\n",
-       "    {'e': 'red',\n",
-       "     'c': 'yellow',\n",
-       "     'a': 34,\n",
-       "     'b': 'blue',\n",
-       "     'd': 'orange',\n",
-       "     'f': 'yellow'},\n",
-       "    {'c': {'c': 'yellow', 'a': 0, 'b': 'violet'},\n",
-       "     'a': 'orange',\n",
-       "     'b': 'green',\n",
-       "     'd': -37},\n",
-       "    -21]],\n",
-       "  'i': {'e': [{'e': 123,\n",
-       "     'a': 106,\n",
-       "     'd': 100,\n",
-       "     'j': 'violet',\n",
-       "     'c': 164,\n",
-       "     'h': ['red', 120, 'orange', 'violet', 54],\n",
-       "     'b': -22,\n",
-       "     'g': 'violet',\n",
-       "     'f': 'orange',\n",
-       "     'i': 130}],\n",
-       "   'c': {'e': 'blue',\n",
-       "    'a': [[198, 82, 2, 'orange', 151], 128, 'violet', 88],\n",
-       "    'd': 72,\n",
-       "    'c': 'blue',\n",
-       "    'h': 194,\n",
-       "    'b': 4,\n",
-       "    'g': 149,\n",
-       "    'f': 'violet'},\n",
-       "   'a': [['blue', 27, 'green', 174],\n",
-       "    'orange',\n",
-       "    50,\n",
-       "    'orange',\n",
-       "    ['orange', 'violet', 154, 167],\n",
-       "    'red',\n",
-       "    'orange',\n",
-       "    {'c': 49,\n",
-       "     'a': 'violet',\n",
-       "     'b': 76,\n",
-       "     'd': {'c': 166, 'a': 'red', 'b': 10, 'd': 185}},\n",
-       "    53,\n",
-       "    'yellow'],\n",
-       "   'b': 'orange',\n",
-       "   'd': 101,\n",
-       "   'f': -1}},\n",
-       " 'b': {'e': {'e': ['blue', 92, -20, 'red', 'yellow', 129, 99, 'yellow', 38],\n",
-       "   'a': 98,\n",
-       "   'd': 129,\n",
-       "   'c': -5,\n",
-       "   'h': 'green',\n",
-       "   'b': 'violet',\n",
-       "   'g': 'blue',\n",
-       "   'f': 'yellow',\n",
-       "   'i': 'red'},\n",
-       "  'a': 'blue',\n",
-       "  'd': [[20, 87, 'red', 124, -2, 'yellow', 'red', 17, 'violet', 'yellow'],\n",
-       "   {'c': 'violet', 'a': 'red', 'b': 161},\n",
-       "   104,\n",
-       "   {'e': ['blue',\n",
-       "     [51, 47, 57, -41, 'green', 149, -11, 'red', 103, 'orange'],\n",
-       "     'violet',\n",
-       "     72,\n",
-       "     'red',\n",
-       "     ['orange', 'blue', 'red'],\n",
-       "     -8,\n",
-       "     {'c': 'violet', 'a': 68, 'b': -43, 'd': 'green'},\n",
-       "     'orange'],\n",
-       "    'a': 36,\n",
-       "    'd': ['orange',\n",
-       "     'green',\n",
-       "     'green',\n",
-       "     106,\n",
-       "     'green',\n",
-       "     'red',\n",
-       "     'red',\n",
-       "     'red',\n",
-       "     'violet'],\n",
-       "    'j': {'a': 'red', 'b': 144},\n",
-       "    'c': 166,\n",
-       "    'h': 109,\n",
-       "    'b': [{'a': 56, 'b': 'red'}, -41, 'blue', 36, 20, 'blue', 'blue'],\n",
-       "    'g': 188,\n",
-       "    'f': 'yellow',\n",
-       "    'i': -7},\n",
-       "   [155,\n",
-       "    ['green', 'green', 0, 'red', 'blue'],\n",
-       "    {'e': 144,\n",
-       "     'c': 'green',\n",
-       "     'a': 'orange',\n",
-       "     'b': 133,\n",
-       "     'd': 10,\n",
-       "     'f': [91, 160, 'blue', 183, 18, 43, 85, -37]},\n",
-       "    {'e': 'violet',\n",
-       "     'a': -35,\n",
-       "     'd': 57,\n",
-       "     'c': 'violet',\n",
-       "     'h': 17,\n",
-       "     'b': 'orange',\n",
-       "     'g': 57,\n",
-       "     'f': 'red',\n",
-       "     'i': 'blue'},\n",
-       "    'red',\n",
-       "    'red',\n",
-       "    'green',\n",
-       "    'red',\n",
-       "    29,\n",
-       "    {'e': 112,\n",
-       "     'c': ['red', 'blue', 68, 'red', 'yellow'],\n",
-       "     'a': 'blue',\n",
-       "     'g': 'blue',\n",
-       "     'b': {'a': 'red'},\n",
-       "     'd': 162,\n",
-       "     'f': 'green'}],\n",
-       "   'green',\n",
-       "   [42, 'orange'],\n",
-       "   [['yellow', 183, 2, 'red', 115, 'red', -31]]],\n",
-       "  'j': 29,\n",
-       "  'c': {'e': [{'c': 'orange',\n",
-       "     'a': {'e': 'orange',\n",
-       "      'c': -47,\n",
-       "      'a': 'blue',\n",
-       "      'b': 35,\n",
-       "      'd': 25,\n",
-       "      'f': 'blue'},\n",
-       "     'b': 111,\n",
-       "     'd': 16},\n",
-       "    -44,\n",
-       "    -22,\n",
-       "    179,\n",
-       "    'yellow',\n",
-       "    84],\n",
-       "   'a': {'e': 178,\n",
-       "    'a': ['red', 183, 92],\n",
-       "    'd': 163,\n",
-       "    'c': 105,\n",
-       "    'h': 24,\n",
-       "    'b': 'violet',\n",
-       "    'g': -26,\n",
-       "    'f': [125, 'green', 'violet'],\n",
-       "    'i': 'red'},\n",
-       "   'd': [[12, 'yellow', 'blue', 'green'],\n",
-       "    144,\n",
-       "    [114, 'orange', 92, 'blue', ['violet', 40, 'blue'], 67, 105],\n",
-       "    ['orange', 155, 'violet', 37, -38]],\n",
-       "   'j': {'a': {'c': ['green', 'yellow', -13, 'green', 'red'],\n",
-       "     'a': [-27],\n",
-       "     'b': 'violet'},\n",
-       "    'b': ['red', [109, 57], 181, 'blue', 193, -32, 83, 'violet']},\n",
-       "   'c': 128,\n",
-       "   'h': 21,\n",
-       "   'b': {'e': 'red',\n",
-       "    'a': 'red',\n",
-       "    'd': 'green',\n",
-       "    'c': ['green', {'a': 'blue'}],\n",
-       "    'h': 'orange',\n",
-       "    'b': {'e': 199, 'c': 35, 'a': 126, 'b': 183, 'd': 60},\n",
-       "    'g': 'orange',\n",
-       "    'f': 'violet',\n",
-       "    'i': 105},\n",
-       "   'g': 'yellow',\n",
-       "   'f': 133,\n",
-       "   'i': [{'c': 'violet', 'a': 'yellow', 'b': 'orange', 'd': 144},\n",
-       "    'red',\n",
-       "    'yellow',\n",
-       "    'green',\n",
-       "    105,\n",
-       "    72,\n",
-       "    'red',\n",
-       "    'yellow']},\n",
-       "  'h': ['violet',\n",
-       "   [[161, 'red', 'blue', [98, 'red', 'violet'], 'orange', 51, 'violet'],\n",
-       "    'violet',\n",
-       "    -6,\n",
-       "    'orange',\n",
-       "    'yellow',\n",
-       "    51],\n",
-       "   {'e': 72,\n",
-       "    'a': [190, 'red', 'blue', -13, 90, 'blue', -6, 'violet', 137, 61],\n",
-       "    'd': [126, ['red', 101, 118], 13, 'blue', -4, 'blue', [47, 157, 77]],\n",
-       "    'c': 'orange',\n",
-       "    'h': 176,\n",
-       "    'b': {'c': [67, 'green', 59, 'green', 140, 'orange', 'blue', 15, 53],\n",
-       "     'a': 162,\n",
-       "     'b': 'orange',\n",
-       "     'd': 47},\n",
-       "    'g': 49,\n",
-       "    'f': 'yellow',\n",
-       "    'i': 'violet'}],\n",
-       "  'b': {'e': 132,\n",
-       "   'c': [['blue', 142, 'violet', 'green', 75, 56, 'green', 'green'],\n",
-       "    'red',\n",
-       "    185,\n",
-       "    'orange',\n",
-       "    'violet'],\n",
-       "   'a': 144,\n",
-       "   'b': 'violet',\n",
-       "   'd': {'e': 'green',\n",
-       "    'a': 'blue',\n",
-       "    'd': 'violet',\n",
-       "    'c': ['violet', 'yellow', 'orange', 'green', 121, 'blue', -23],\n",
-       "    'h': 'violet',\n",
-       "    'b': 'yellow',\n",
-       "    'g': -34,\n",
-       "    'f': 147,\n",
-       "    'i': 127},\n",
-       "   'f': -25},\n",
-       "  'g': 'green',\n",
-       "  'f': 'blue',\n",
-       "  'i': 80}}"
+       "list"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0]"
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for obj in data:\n",
+    "    print(type(obj))"
    ]
   },
   {
