--- a/advent2017/Day 14 - Disk Defragmentation.ipynb
+++ b/advent2017/Day 14 - Disk Defragmentation.ipynb
@@ -326,9 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "So all the contigious 1's represent one region, so lets count the regions in the test_input first, which we know to have `1242` regions:"
    ]
@@ -873,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -887,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
