syncing all changes, started day 13 but haven't actually done i it

--- a/advent2018/Day 04 Repose Record.ipynb
+++ b/advent2018/Day 04 Repose Record.ipynb
@@ -93,6 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The simple alphabetical sort looks like it has sorted this timewise as well. \n",
     "Test input to run code on first:"
    ]
   },
