--- a/advent2016/Day 01 No Time for a Taxicab.ipynb
+++ b/advent2016/Day 01 No Time for a Taxicab.ipynb
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
