--- a/advent2018/Day 13 Mine Cart Madness.ipynb
+++ b/advent2018/Day 13 Mine Cart Madness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "turns =  [\"left\", \"straight\", \"right\"]\n",
     "directions_txt = [\"up\", \"down\", \"left\", \"right\"]\n",
-    "directions = list(\"^v<>\")"
+    "directions = list(\"^v<>\")\n",
+    "\n",
+    "TURNS = {\n",
+    "    ('v', '/'): '<', ('v', '\\\\'): '>',\n",
+    "    ('>', '/'): '^', ('>', '\\\\'): 'v',\n",
+    "    ('^', '/'): '>', ('^', '\\\\'): '<',\n",
+    "    ('<', '/'): 'v', ('<', '\\\\'): '^',\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +61,7 @@
        "{'^': 'up', 'v': 'down', '<': 'left', '>': 'right'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,16 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Point' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-869facb2c1c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m DIRECTIONS = {\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;34m'v'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;34m'>'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;34m'<'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Point' is not defined"
+     ]
+    }
+   ],
    "source": [
     "@dataclass\n",
     "class Cart:\n",
     "    x: int\n",
     "    y: int\n",
     "    facing: str\n",
-    "    turn = cycle(turns)"
+    "    turn = cycle(turns)\n",
+    "    \n",
+    "DIRECTIONS = {\n",
+    "    'v': Point( 0,  1),\n",
+    "    '>': Point( 1,  0),\n",
+    "    '<': Point(-1,  0),\n",
+    "    '^': Point( 0, -1)\n",
+    "    }"
    ]
   },
   {
@@ -199,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
