--- a/advent2018/Day 15 Beverage Bandits.ipynb
+++ b/advent2018/Day 15 Beverage Bandits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unit(x=0, y=1, t='E', hp=200, power=3, alive=True)"
+       "Unit(x=0, y=1, kind='E', hp=200, power=3, alive=True)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
     "class Unit:\n",
     "    x: int = None\n",
     "    y: int = None\n",
-    "    t: str = None\n",
+    "    kind: str = None\n",
     "    hp: int = 200\n",
     "    power: int = 3\n",
     "    alive: bool = True\n",
@@ -105,9 +105,13 @@
     "        x = self.x\n",
     "        y = self.y\n",
     "        return [(x-1, y), (x+1, y), (x, y-1), (x, y+1)]\n",
+    "    \n",
+    "    def turn(self):\n",
+    "        for n in self.neigbours():\n",
+    "            if n.kind \n",
     "\n",
     "\n",
-    "Unit(0,1, \"E\")"
+    "Unit(x=0, y=1, kind=\"E\")"
    ]
   },
   {
@@ -314,9 +318,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
