--- a/advent2019/Day 05.ipynb
+++ b/advent2019/Day 05.ipynb
@@ -1,1 +1,337 @@
-{"cells":[{"cell_type":"code","metadata":{"tags":[]},"outputs":[],"source":"import utils\nfrom typing import List\n\nraw_inp = \"\"\"3,225,1,225,6,6,1100,1,238,225,104,0,1101,40,27,224,101,-67,224,224,4,224,1002,223,8,223,1001,224,2,224,1,224,223,223,1101,33,38,225,1102,84,60,225,1101,65,62,225,1002,36,13,224,1001,224,-494,224,4,224,1002,223,8,223,1001,224,3,224,1,223,224,223,1102,86,5,224,101,-430,224,224,4,224,1002,223,8,223,101,6,224,224,1,223,224,223,1102,23,50,225,1001,44,10,224,101,-72,224,224,4,224,102,8,223,223,101,1,224,224,1,224,223,223,102,47,217,224,1001,224,-2303,224,4,224,102,8,223,223,101,2,224,224,1,223,224,223,1102,71,84,225,101,91,40,224,1001,224,-151,224,4,224,1002,223,8,223,1001,224,5,224,1,223,224,223,1101,87,91,225,1102,71,19,225,1,92,140,224,101,-134,224,224,4,224,1002,223,8,223,101,1,224,224,1,224,223,223,2,170,165,224,1001,224,-1653,224,4,224,1002,223,8,223,101,5,224,224,1,223,224,223,1101,49,32,225,4,223,99,0,0,0,677,0,0,0,0,0,0,0,0,0,0,0,1105,0,99999,1105,227,247,1105,1,99999,1005,227,99999,1005,0,256,1105,1,99999,1106,227,99999,1106,0,265,1105,1,99999,1006,0,99999,1006,227,274,1105,1,99999,1105,1,280,1105,1,99999,1,225,225,225,1101,294,0,0,105,1,0,1105,1,99999,1106,0,300,1105,1,99999,1,225,225,225,1101,314,0,0,106,0,0,1105,1,99999,1107,226,677,224,1002,223,2,223,1006,224,329,101,1,223,223,8,226,226,224,1002,223,2,223,1005,224,344,101,1,223,223,1007,677,226,224,102,2,223,223,1005,224,359,101,1,223,223,8,226,677,224,102,2,223,223,1005,224,374,101,1,223,223,1107,677,677,224,1002,223,2,223,1005,224,389,1001,223,1,223,108,226,677,224,102,2,223,223,1005,224,404,1001,223,1,223,108,677,677,224,1002,223,2,223,1006,224,419,101,1,223,223,107,677,677,224,102,2,223,223,1006,224,434,101,1,223,223,108,226,226,224,1002,223,2,223,1006,224,449,1001,223,1,223,8,677,226,224,1002,223,2,223,1005,224,464,101,1,223,223,1108,226,677,224,1002,223,2,223,1006,224,479,1001,223,1,223,1108,677,677,224,1002,223,2,223,1005,224,494,101,1,223,223,7,677,677,224,1002,223,2,223,1005,224,509,101,1,223,223,1007,677,677,224,1002,223,2,223,1005,224,524,101,1,223,223,7,677,226,224,1002,223,2,223,1005,224,539,101,1,223,223,1107,677,226,224,102,2,223,223,1006,224,554,101,1,223,223,107,226,677,224,1002,223,2,223,1005,224,569,101,1,223,223,107,226,226,224,1002,223,2,223,1005,224,584,101,1,223,223,1108,677,226,224,102,2,223,223,1006,224,599,1001,223,1,223,1008,677,677,224,102,2,223,223,1006,224,614,101,1,223,223,7,226,677,224,102,2,223,223,1005,224,629,101,1,223,223,1008,226,677,224,1002,223,2,223,1006,224,644,101,1,223,223,1007,226,226,224,1002,223,2,223,1005,224,659,1001,223,1,223,1008,226,226,224,102,2,223,223,1006,224,674,1001,223,1,223,4,223,99,226\"\"\""},{"cell_type":"markdown","source":"## Day 5\n\nWe're back to using the simple computer in day 2.\n\nBut, for day 2 we read the tape 4 instructions at a time. Now it gets more complex, as opcodes 3 and 4 only have 1 param value, so the tape advances 2 steps for those, and 4 steps otherwise.\n\nSo the code needs some logic on how to advance.","metadata":{"tags":[]}},{"cell_type":"code","source":"def parse_input(day=5, test=raw_inp) -> List[int]:\n    if not test:\n        inp = utils.get_input(day)\n    else:\n        inp = test\n        \n    #return [int(x) for x in inp.split(\",\")]\n    return inp.split(\",\")\n    \ninp = parse_input(test=raw_inp)\ninp[:10]","metadata":{"tags":[]},"outputs":[{"output_type":"execute_result","execution_count":82,"data":{"text/plain":"['3', '225', '1', '225', '6', '6', '1100', '1', '238', '225']"},"metadata":{}}]},{"cell_type":"code","source":"def read_tape(tape):\n    pos = 0\n    while tape[pos] != 99 and pos < len(tape):\n        yield self.tape[i:i+4]","metadata":{"tags":[]},"outputs":[]},{"cell_type":"code","source":"class IntComp:\n    def __init__(self, noun:int=12, verb:int=2):\n        self.tape = parse_input()\n        self.pos = 0\n        self.noun = noun\n        self.verb = verb\n        self.tape[1] = noun\n        self.tape[2] = verb\n        \n    def read_tape(self):\n        for i in range(0, len(self.tape)-1, 4):\n            yield self.tape[i:i+4]\n            \ncomp = IntComp()\ncomp.tape[:10], comp.pos","metadata":{"tags":[]},"outputs":[{"output_type":"execute_result","execution_count":76,"data":{"text/plain":"([3, 12, 2, 225, 6, 6, 1100, 1, 238, 225], 0)"},"metadata":{}}]},{"cell_type":"code","source":"\"abcd\"[2:], \"abcd\"[:2]","metadata":{"tags":[]},"outputs":[{"output_type":"execute_result","execution_count":94,"data":{"text/plain":"('cd', 'ab')"},"metadata":{}}]},{"cell_type":"code","source":"tape = parse_input()\ntape[:10]","metadata":{"tags":[]},"outputs":[{"output_type":"execute_result","execution_count":78,"data":{"text/plain":"[3, 225, 1, 225, 6, 6, 1100, 1, 238, 225]"},"metadata":{}}]},{"cell_type":"code","source":"tape = parse_input()\nlen(tape[0])","metadata":{"tags":[]},"outputs":[{"output_type":"execute_result","execution_count":90,"data":{"text/plain":"1"},"metadata":{}}]},{"cell_type":"code","source":"def solve_1(noun:int=12, verb:int=2):\n    tape = parse_input() \n    outputs = []\n    # update registers as per instructions\n    tape[1] = noun\n    tape[2] = verb\n    \n    pos = 0\n    \n    while tape[pos] != 99 and pos < len(tape):\n        cur = tape[0]\n        if len(cur) == \"1\":\n            opcode = int(cur)\n        else:\n            opcode = int(tape[2:])\n            param = int(tape[:2])\n            \n        #i, j, idx in read_tape(tape):\n        if opcode == 99:\n            break\n        elif opcode == 1: # add\n            tape[idx] = tape[i] + tape[j]\n            pos += 4\n        elif opcode == 2: # multiple\n            tape[idx] = tape[i] * tape[j]\n            pos += 4\n        elif opcode == 3: # input\n            pos += 2\n            pass\n        elif opcode == 4: # output\n            print(tape[i])\n            outputs.append(tape[i])\n            pos += 2\n        elif opcode == 5: # \n            pass\n        elif opcode == 6:\n            pass\n        elif opcode == 7:\n            pass\n        elif opcode == 8:\n            pass\n        else:\n            print(\"DANGER WILL ROBINSION\")\n    print(f\"Answer: {outputs[-1]}\")\n    return outputs\n    \nsolve_1()","metadata":{"tags":[]},"outputs":[{"output_type":"error","ename":"TypeError","evalue":"int() argument must be a string, a bytes-like object or a number, not 'list'","traceback":["\u001b[0;31m---------------------------------------------------------------------------\u001b[0m","\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)","\u001b[0;32m<ipython-input-96-73fa9c13e891>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m \u001b[0msolve_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m","\u001b[0;32m<ipython-input-96-73fa9c13e891>\u001b[0m in \u001b[0;36msolve_1\u001b[0;34m(noun, verb)\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mopcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m             \u001b[0mopcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mparam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n","\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'list'"]}]},{"cell_type":"code","source":"","metadata":{"tags":[]},"outputs":[],"execution_count":null}],"nbformat":4,"nbformat_minor":2,"metadata":{}}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import utils\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Day 5\n",
+    "\n",
+    "We're back to using the simple computer in day 2.\n",
+    "\n",
+    "But, for day 2 we read the tape 4 instructions at a time. Now it gets more complex, as opcodes 3 and 4 only have 1 param value, so the tape advances 2 steps for those, and 4 steps otherwise.\n",
+    "\n",
+    "So the code needs some logic on how to advance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3', '225', '1', '225', '6', '6', '1100', '1', '238', '225']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse_input(day=5, test=None) -> List[int]:\n",
+    "    if not test:\n",
+    "        inp = utils.get_input(day)\n",
+    "    else:\n",
+    "        inp = test\n",
+    "        \n",
+    "    #return [int(x) for x in inp.split(\",\")]\n",
+    "    return inp.split(\",\")\n",
+    "    \n",
+    "inp = parse_input(test=raw_inp)\n",
+    "inp[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def read_tape(tape):\n",
+    "    pos = 0\n",
+    "    while tape[pos] != 99 and pos < len(tape):\n",
+    "        yield self.tape[i:i+4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([3, 12, 2, 225, 6, 6, 1100, 1, 238, 225], 0)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class IntComp:\n",
+    "    def __init__(self, noun:int=12, verb:int=2):\n",
+    "        self.tape = parse_input()\n",
+    "        self.pos = 0\n",
+    "        self.noun = noun\n",
+    "        self.verb = verb\n",
+    "        self.tape[1] = noun\n",
+    "        self.tape[2] = verb\n",
+    "        \n",
+    "    def read_tape(self):\n",
+    "        for i in range(0, len(self.tape)-1, 4):\n",
+    "            yield self.tape[i:i+4]\n",
+    "            \n",
+    "comp = IntComp()\n",
+    "comp.tape[:10], comp.pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pointer: 0, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 12, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 24, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 36, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 48, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 60, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 72, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 84, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 96, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 108, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 120, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 132, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 144, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 156, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 168, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 180, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 192, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 204, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 216, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 228, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 240, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 252, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 264, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 276, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 288, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 300, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 312, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 324, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 336, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 348, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 360, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 372, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 384, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 396, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 408, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 420, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 432, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 444, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 456, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 468, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 480, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 492, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 504, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 516, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 528, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 540, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 552, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 564, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 576, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 588, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 600, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 612, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 624, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 636, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 648, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 660, Current: 3\n",
+      "sdfs\n",
+      "Pointer: 672, Current: 3\n",
+      "sdfs\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-28aaeb029a19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moutputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m \u001b[0msolve_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-28aaeb029a19>\u001b[0m in \u001b[0;36msolve_1\u001b[0;34m(noun, verb)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mwhile\u001b[0m \u001b[0mtape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m99\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mpos\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Pointer: {pos}, Current: {cur}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def solve_1(noun:int=12, verb:int=2):\n",
+    "    tape = parse_input() \n",
+    "    outputs = []\n",
+    "    # update registers as per instructions\n",
+    "    tape[1] = noun\n",
+    "    tape[2] = verb\n",
+    "    \n",
+    "    ptr = 0 # points to current position on tape\n",
+    "    \n",
+    "    while tape[pos] != 99 and ptr < len(tape):\n",
+    "        cur = tape[0]\n",
+    "        print(f\"Pointer: {ptr}, Current: {cur}\")\n",
+    "        if len(cur) == 1:\n",
+    "            print(\"sdfs\")\n",
+    "            opcode = int(cur)\n",
+    "        else:\n",
+    "            print(cur)\n",
+    "            opcode = int(cur[2:])\n",
+    "            param = int(cur[:2])\n",
+    "            \n",
+    "        #i, j, idx in read_tape(tape):\n",
+    "        if opcode == 99:\n",
+    "            break\n",
+    "        elif opcode == 1: # add\n",
+    "            tape[idx] = tape[i] + tape[j]\n",
+    "            pos += 4\n",
+    "        elif opcode == 2: # multiple\n",
+    "            tape[idx] = tape[i] * tape[j]\n",
+    "            pos += 4\n",
+    "        elif opcode == 3: # input\n",
+    "            pos += 2\n",
+    "            pass\n",
+    "        elif opcode == 4: # output\n",
+    "            print(tape[i])\n",
+    "            outputs.append(tape[i])\n",
+    "            pos += 2\n",
+    "        elif opcode == 5: # \n",
+    "            pass\n",
+    "        elif opcode == 6:\n",
+    "            pass\n",
+    "        elif opcode == 7:\n",
+    "            pass\n",
+    "        elif opcode == 8:\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"DANGER WILL ROBINSION\")\n",
+    "        pos += 10\n",
+    "    print(f\"Answer: {outputs[-1]}\")\n",
+    "    return outputs\n",
+    "    \n",
+    "solve_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
